@@ -61,6 +61,7 @@ importFrom(methods,slot)
 importFrom(rgeos,gBuffer)
 importFrom(rgeos,gIsValid)
 importFrom(sf,st_as_sf)
+importFrom(sf,st_bbox)
 importFrom(stats,na.omit)
 importFrom(stats,smooth.spline)
 importFrom(utils,capture.output)
