@@ -352,7 +352,7 @@ runGdal <- function(product, collection=NULL,
                                   s_srs,
                                   t_srs,
                                   of,
-                                  te,
+                                  if (!is.null(extent@target)) te else NULL,
                                   tr,
                                   cp,
                                   bs,
@@ -389,7 +389,7 @@ runGdal <- function(product, collection=NULL,
                              s_srs,
                              t_srs,
                              of,
-                             te,
+                             if (!is.null(extent@target)) te else NULL,
                              tr,
                              cp,
                              bs,
