@@ -65,3 +65,7 @@ getHdf():
 - 'server_alt' is 'LAADS' even if opts$MODISserverOrder is "LPDAAC" only
 
 Automated wget, curl check if MODISserverOrder = "LPDAAC"
+
+General solution for "//"
+
+All files in 'external' required (eg. EPSG:4326 world grid, also included in MODIS_TilesPolys.RData)
